# r3almX-backend

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  bump_version.py  docker-compose.yaml  fly.toml  hello.py  main.py  makefile  pyproject.toml  queue_testing.py  readme.md  requirements.txt  todo.md  type_issues  type_issues.txt  typing.bat  update_version.py  websocket.html  websocket.js
.github/workflows/: codeql.yml  ethicalcheck.yml  pysa.yml  version-bump.yml
r3almX_backend/: __init__.py  inst_modifiers.py  main.py  proj_logger.py  version.py
r3almX_backend/auth_service/: Config.py  auth_routes.py  auth_utils.py  main.py  user_handler_utils.py  user_models.py  user_schemas.py
r3almX_backend/chat_service/: chat_service_endpoints.py  connection_service.py  main.py  notification_service.py
r3almX_backend/chat_service/channel_system/: channel_management_endpoints.py  channel_utils.py  main.py
r3almX_backend/chat_service/invite_system/: invite_system_endpoint.py  main.py
r3almX_backend/chat_service/models/: channels_model.py  rooms_model.py  rooms_table.py
r3almX_backend/chat_service/room_service/: main.py  room_management_endpoints.py  room_utils_endpoints.py
r3almX_backend/database/: __init__.py
r3almX_backend/friends_service/: friends_endpoint.py  main.py
r3almX_backend/post_service/: main.py  post_endpoints.py  post_model.py  types.py
r3almX_backend/realtime_service/: DigestionBroker.py  chat_service.py  connection_service.py  main.py  notification_service.py  observer_service.py  websocketFactory.py
r3almX_backend/search_service/: main.py  search_endpoints.py
r3almX_backend/user_state_service/: main.py
r3almX_env/: pyvenv.cfg
r3almX_env/Scripts/: activate  activate.bat
src/lat_long_service/: routes.py
vaulted_code/: chat_service_endpoints.py
