[project]
name = "r3almx-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi-cli>=0.0.7",
    "fastapi>=0.115.6",
    "fastapi-pagination>=0.12.34",
    "fastapi-utils>=0.8.0",
    "aio-pika>=9.5.4",
    "cryptography>=44.0.0",
    "starlette>=0.41.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.4",
    "pyotp>=2.9.0",
    "python-jose>=3.3.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "rich>=13.9.4",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "asyncpgsa>=0.27.1",
    "google>=3.0.0",
    "google-auth>=2.37.0",
    "requests>=2.32.3",
    "passlib>=1.7.4",
    "sqlalchemy-searchable>=2.1.0",
    "aiopg>=1.4.0",
]
