[project]
name = "r3almx-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "asyncpg>=0.30.0",
    "colorama>=0.4.6",
    "cryptography>=46.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "fastapi-pagination>=0.12.34",
    "google>=3.0.0",
    "google-auth>=2.39.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.3",
    "pydantic>=2.11.3",
    "pyotp>=2.9.0",
    "python-jose>=3.4.0",
    "redis>=7.3.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
